--- a/index.html
+++ b/index.html
@@ -19,13 +19,25 @@
 			<a href="https://www.instagram.com/hover.ca/" target=”_blank” class="fa fa-instagram"></a>
 			<a href="#" class="fa fa-youtube"></a>
 		</div>
-		<h3 id = "discover">Discover Hover</h3>
+		<a href="#intro"><h3 id = "discover" class="">Discover the Hover</h3></a>
+	</div>
+	<div id="intro">
+		<h2 class="text-center paved">Introducing the world's first real hoverboard</h2>
+		<div id="leavepics">
+			<img src="board2.png" class="leavepic" width="400">
+			<img src="board1.png" class="leavepic" width="400">
+		</div>
+		<h3 class="text">The worlds first hoverboard is finally here and it is even better than predicted in the movies. Or hoverboard is super easy to control as all you have to do is lean in the direction in which you want to go. The board is eqiped with high tech technology to ensure the safety of all users.</h3>
+	</div>
+	<div id="pave">
+		<h2 class="text-center paved">Never rely on pathed roads again</h2>
+		<div id="leavepics">
+			<img src="Lake.jpg" class="leavepic" width="400">
+			<img src="Forest.jpg" class="leavepic" width="400">
+		</div>
 	</div>
 
-	<h2 class="text-center paved">Leave the paved roads behind</h2>
-	<div id="leavepics">
-		<img src="Lake.jpg" width="400">
-		<img src="Forest.jpg" width="400">
-	</div>
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+	<script type="text/javascript" src="script.js"></script>
 </body>
 </html>
