--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
 	<title>Hover</title>
 	<link href="https://fonts.googleapis.com/css?family=Monoton&display=swap" rel="stylesheet">
+	<link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 	<link rel="stylesheet" type="text/css" href="Bootstrap/css/bootstrap.min.css">
 	<link rel="stylesheet" type="text/css" href="styles.css">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.2/animate.min.css">
@@ -21,23 +22,43 @@
 		</div>
 		<a href="#intro"><h3 id = "discover" class="">Discover the Hover</h3></a>
 	</div>
-	<div id="intro">
-		<h2 class="text-center paved">Introducing the world's first real hoverboard</h2>
+
+	<div id="intro" class="animated">
+		<h2 class="text-center paved animated" data-aos="fade-up">Introducing the world's first real hoverboard</h2>
 		<div id="leavepics">
-			<img src="board2.png" class="leavepic" width="400">
-			<img src="board1.png" class="leavepic" width="400">
+			<img src="board2.png" data-aos="fade-right" class="leavepic animated" width="400">
+			<img src="board1.png" data-aos="fade-left" class="leavepic animated" width="400">
 		</div>
-		<h3 class="text">The worlds first hoverboard is finally here and it is even better than predicted in the movies. Or hoverboard is super easy to control as all you have to do is lean in the direction in which you want to go. The board is eqiped with high tech technology to ensure the safety of all users.</h3>
+		<center><h3 class="text" data-aos="fade-up">It is finally here and it is even better than predicted in the movies. Our hoverboard is super easy to control, all you have to do is lean in the direction in which you want to go. The board is equiped with high tech technology to ensure the safety of all users.</h3></center>
 	</div>
-	<div id="pave">
-		<h2 class="text-center paved">Never rely on pathed roads again</h2>
+
+	<div id="explanation" class="animated">
+		<h2 class="text-center explain animated" data-aos="fade-up">How it works</h2>
 		<div id="leavepics">
-			<img src="Lake.jpg" class="leavepic" width="400">
-			<img src="Forest.jpg" class="leavepic" width="400">
+			<img src="magnet.jpg" data-aos="fade-right" class="leavepic animated" width="400">
+			<img src="board1.png" data-aos="fade-left" class="leavepic animated" width="400">
+		</div>
+		<center><h3 class="text" data-aos="fade-up">At hover we have discovered a way to harness the energy produced naturally by our very own earth. Our revolutionary magnet found at the bottom of every board is able to repell this energy allowing it to hover above the ground. Thanks to the micro-chips found on board, the hoverboard is always safe to use.<br><br>In order to ride the board, the user simply has to lean in the direction in which they intend to go. The board can be turned off and on using voice control causing it to slowly descend/ascend. While hovering over the surface the board levitates 10-20cm above the ground, this can differ based on the weight of the user.</h3></center>
+	</div>
+
+	<div id="pave" class="animated">
+		<h2 class="text-center paved" data-aos="fade-up">Never rely on pathed roads again</h2>
+		<div id="leavepics">
+			<img src="suburb.jpg" data-aos="fade-right" class="leavepic" width="400">
+			<img src="Road.jpg" data-aos="fade-left" class="leavepic" width="400">
+			<br>
+			<img src="arrow.png" data-aos="zoom-in" class="leavepic" width="100">
+			<br>
+			<img src="Lake.jpg" data-aos="fade-right" class="leavepic" width="400">
+			<img src="Forest.jpg" data-aos="fade-left" class="leavepic" width="400">
+			<br>
+			<center><h3 class="text" data-aos="fade-up">With our hover you are no longer confined to the roads, since our hoverboard does not need to be in contact with the ground it is able to manouvre over any terrain.</h3><br><h3 data-aos="fade-up"><b>Imagine the posibillities</b></h3></center>
 		</div>
 	</div>
 
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+	<script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+
 	<script type="text/javascript" src="script.js"></script>
 </body>
 </html>
