--- a/index.html
+++ b/index.html
@@ -20,11 +20,11 @@
 			<a href="https://www.instagram.com/hover.ca/" target=”_blank” class="fa fa-instagram"></a>
 			<a href="#" class="fa fa-youtube"></a>
 		</div>
-		<a href="#intro"><h3 id = "discover" class="">Discover the Hover</h3></a>
+		<a href="#introdcing"><h3 id = "discover" class="">Discover the Hover</h3></a>
 	</div>
 
 	<div id="intro" class="animated">
-		<h2 class="text-center paved animated" data-aos="fade-up">Introducing the world's first real hoverboard</h2>
+		<h2 class="text-center paved animated" data-aos="fade-up" id="introdcing">Introducing the world's first real hoverboard</h2>
 		<div id="leavepics">
 			<img src="board2.png" data-aos="fade-right" class="leavepic animated" width="400">
 			<img src="board1.png" data-aos="fade-left" class="leavepic animated" width="400">
@@ -55,7 +55,11 @@
 			<center><h3 class="text" data-aos="fade-up">With our hover you are no longer confined to the roads, since our hoverboard does not need to be in contact with the ground it is able to manouvre over any terrain.</h3><br><h3 data-aos="fade-up"><b>Imagine the posibillities</b></h3></center>
 		</div>
 	</div>
-
+	<div id = "top" class="text-center">
+		<h1 id = "question" class="animated fadeInDownBig">So what are you waiting for?</h1>
+		<button type="button" class="butohn btn btn-primary btn-lg" data-aos="fade-up">Pre-Order now</button><br>
+		<img src="hoverboard.png" class = "hoverboard" data-aos="fade-up">
+	</div>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 	<script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
 
