--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 	</div>
 	<div id = "top" class="text-center">
 		<h1 id = "question" class="animated fadeInDownBig">So what are you waiting for?</h1>
-		<button type="button" class="butohn btn btn-primary btn-lg" data-aos="fade-up">Pre-Order now</button><br>
+		<a href="joke.html"><button type="button" class="butohn btn btn-primary btn-lg" data-aos="fade-up">Pre-Order now</button></a><br>
 		<img src="hoverboard.png" class = "hoverboard" data-aos="fade-up">
 	</div>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
