--- a/index.html
+++ b/index.html
@@ -42,9 +42,9 @@
 	</div>
 
 	<div id="pave" class="animated">
-		<h2 class="text-center paved" data-aos="fade-up">Never rely on pathed roads again</h2>
+		<h2 class="text-center paved" data-aos="fade-up">Never rely on paved roads again</h2>
 		<div id="leavepics">
-			<img src="suburb.jpg" data-aos="fade-right" class="leavepic" width="400">
+			<img src="fall.gif" data-aos="fade-right" class="leavepic" width="400">
 			<img src="Road.jpg" data-aos="fade-left" class="leavepic" width="400">
 			<br>
 			<img src="arrow.png" data-aos="zoom-in" class="leavepic" width="100">
