shitter is hovering now

--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
 <body>
 	<div id = "top" class="text-center">
 		<h1 id = "logo" class="animated fadeInDownBig">HOVER</h1>
-		<img src="hoverboard.png" class = "hoverboard animated fadeInLeftBig">
+		<div id="hoverburd" class="animated fadeInLeft">
+			<img src="hoverboard.png" class = "hoverboard">
+		</div>
 		<div id="socialmedia" class="">
 			<a href="#" class="fa fa-facebook"></a>
 			<a href="#" class="fa fa-twitter"></a>
@@ -38,7 +40,7 @@
 			<img src="magnet.jpg" data-aos="fade-right" class="leavepic animated" width="400">
 			<img src="board1.png" data-aos="fade-left" class="leavepic animated" width="400">
 		</div>
-		<center><h3 class="text" data-aos="fade-up">At hover we have discovered a way to harness the energy produced naturally by our very own earth. Our revolutionary magnet found at the bottom of every board is able to repell this energy allowing it to hover above the ground. Thanks to the micro-chips found on board, the hoverboard is always safe to use.<br><br>In order to ride the board, the user simply has to lean in the direction in which they intend to go. The board can be turned off and on using voice control causing it to slowly descend/ascend. While hovering over the surface the board levitates 10-20cm above the ground, this can differ based on the weight of the user.</h3></center>
+		<center><h3 class="text" data-aos="fade-up">At hover we have discovered a way to harness the magnetic energy produced naturally by our very own earth. Our revolutionary magnet found at the bottom of every board is able to repell this energy allowing it to hover above the ground. Thanks to the micro-chips found on board, the hoverboard is always safe to use.<br><br>In order to ride the board, the user simply has to lean in the direction in which they intend to go. The board can be turned off and on using voice control causing it to slowly descend/ascend. While hovering over the surface the board levitates 10-20cm above the ground, this can differ based on the weight of the user.</h3></center>
 	</div>
 
 	<div id="pave" class="animated">
