--- a/index.html
+++ b/index.html
@@ -54,12 +54,12 @@
 			<img src="Lake.jpg" data-aos="fade-right" class="leavepic" width="400">
 			<img src="Forest.jpg" data-aos="fade-left" class="leavepic" width="400">
 			<br>
-			<center><h3 class="text" data-aos="fade-up">With our hover you are no longer confined to the roads, since our hoverboard does not need to be in contact with the ground it is able to manouvre over any terrain.</h3><br><h3 data-aos="fade-up"><b>Imagine the posibillities</b></h3></center>
+			<center><h3 class="text" data-aos="fade-up">With our hover you are no longer confined to the roads, since our hoverboard does not need to be in contact with the ground it is able to manouvre over any terrain.</h3><br><h3 class="text" data-aos="fade-up"><b>Imagine the posibillities</b></h3></center>
 		</div>
 	</div>
 	<div id = "top" class="text-center">
 		<h1 id = "question" class="animated fadeInDownBig">So what are you waiting for?</h1>
-		<a href="joke.html"><button type="button" class="butohn btn btn-primary btn-lg" data-aos="fade-up">Pre-Order now</button></a><br>
+		<a href="joke.html"><button type="button" class="butohn btn btn-primary btn-lg" data-aos="fade-up">Order Now</button></a><br>
 		<img src="hoverboard.png" class = "hoverboard" data-aos="fade-up">
 	</div>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
