--- a/projects/jpcode/index.html
+++ b/projects/jpcode/index.html
@@ -19,7 +19,7 @@
 
 	<p><b>How does it work?</b><br>You enter a piece of text, the encryptor looks at it letter for letter and turns each letter into a numerical value. It takes 3 numerical values and then turns them into one Color (A color takes 3 values: red, green and blue) it then puts all the different colors on a grid of pixels. Once the encryption is done and there are still empty spaces left the Encryptor will put random colors on the grid to fill up the whole image. Each JPCode image contains 200 by 200 pixels, that is 400,000 total pixels, that is 1,200,000 letters encrypted into one tiny picture.<br>
 
-	<button type="button" id="downloadButton" onclick="window.location.href = 'http://jorispostmus.com/jpcode/JPCODE.zip';">Download</button>
+	<button type="button" id="downloadButton" onclick="window.location.href = 'JPCode.zip';">Download</button>
 	<button type="button" id="sourceButton" onclick=" window.open('https://github.com/jprules10/JPCode','_blank')">Source Code</button>
 	<button type="button" id="algorithmButton" onclick=" window.open('http://jorispostmus.com/jpcode/Encryptor-and-Decryptor-Explained.pdf','_blank')">Algorithm Explanation</button>
 	<h4>made by Joris Postmus
