updated website interface

--- a/index.html
+++ b/index.html
@@ -27,48 +27,43 @@
 	<div class = "content">
 		<div class="projects">
 			<div class="column">
-				<div class="project">
+				<div class="project"><a href="downloads/baconbrawl.exe">
 					<img src="res/thumbnails/baconbrawl-thumbnail.png" alt="Bacon Brawl">
+					<div class="subtext"><img src="download.svg"></div>
 					<div class="overlay">
 						<div class="text">Bacon Brawl</div>
-						<div class="subtext">Local Multiplayer game i made when i was 12 years old. The objective is to capture each others bacon and return it to your own base.</div>
-						<div class="downloadButton"><a href="downloads/baconbrawl.exe">Download</a></div>
 					</div>
-				</div>
-				<div class="project">
+				</div></a>
+				<div class="project"><a href="downloads/bal.exe">
 					<img src="res/thumbnails/bal-thumbnail.png" alt="Bal">
+					<div class="subtext"><img src="download.svg"></div>
 					<div class="overlay">
 						<div class="text">Bal</div>
-						<div class="subtext">Bal is an arcade game where you play as a ball and various enemies  are coming towards you. The objective is to stay alive as long as possible</div>
-						<div class="downloadButton"><a href="downloads/bal.exe">Download</a></div>
 					</div>
-				</div>
-				<div class="project">
+				</div></a>
+				<div class="project"><a href="projects/bounce/">
 					<img src="res/thumbnails/bounce-thumbnail.png" alt="Bounce">
+					<div class="subtext"><img src="play.svg"></div>
 					<div class="overlay">
 						<div class="text">Bounce</div>
-						<div class="subtext">Bounce is an arcade game where you place as a monster who's goal is to shoot a projectile that makes it to the end dodging all obstacles.</div>
-						<div class="playButton"><a href="projects/bounce/">Play Game</a></div>
 					</div>
-				</div>
-				<div class="project">
+				</div></a>
+				<div class="project"><a href="projects/ai/">
 					<img src="res/thumbnails/ai-thumbnail.png" alt="Artificial Intelligence - Ant Colony">
+					<div class="subtext"><img src="play.svg"></div>
 					<div class="overlay">
 						<div class="text">AI</div>
-						<div class="subtext">Simulation i created inspired by ant colonies in the real world. Every dot represents a person that has to fight to stay alive.</div>
-						<div class="playButton"><a href="projects/ai/">Visit Page</a></div>
 					</div>
-				</div>
+				</div></a>
 				<div class="project">
 					<img src="res/thumbnails/meathunt-thumbnail.png" alt="Meathunt">
 					<div class="overlay">
 						<div class="text">Meathunt</div>
-						<div class="subtext">You're a farmer and all your cows have gone crazy. All you have is your shotgun, can you survive?</div>
-						<div class="playButton">Coming Soon</div>
 					</div>
 				</div>
 				<div class="project"><a href="https://jorisgame.netlify.com/" target="_blank">
 					<img src="res/thumbnails/jorisgame-thumbnail.png">
+					<div class="subtext"><img src="play.svg"></div>
 					<div class="overlay">
 						<div class="text">Joris Game</div>
 					</div></a>
@@ -89,18 +84,21 @@
 				</div>
 				<div class="project"><a href="projects/dodgo/" target="_blank">
 					<img src="res/thumbnails/dodgo-thumbnail.png">
+					<div class="subtext"><img src="play.svg"></div>
 					<div class="overlay">
 						<div class="text">Dodgo</div>
 					</div></a>
 				</div>
 				<div class="project"><a href="projects/jpcode">
 					<img src="res/thumbnails/jpcode-thumbnail.png">
+					<div class="subtext"><img src="play.svg"></div>
 					<div class="overlay">
 						<div class="text">JPCode</div>
 					</div></a>
 				</div>
 				<div class="project"><a href="downloads/fps-joris.exe">
 					<img src="res/thumbnails/fpsjoris-thumbnail.png">
+					<div class="subtext"><img src="download.svg"></div>
 					<div class="overlay">
 						<div class="text">FPS Joris</div>
 					</div></a>
@@ -119,6 +117,7 @@
 				</div>
 				<div class="project"><a href="downloads/tinyworld.exe">
 					<img src="res/thumbnails/tinyworld-thumbnail.png">
+					<div class="subtext"><img src="download.svg"></div>
 					<div class="overlay">
 						<div class="text">Tiny World</div>
 					</div></a>
@@ -127,18 +126,21 @@
 			<div class="column">
 				<div class="project"><a href="downloads/multy-fly.exe">
 					<img src="res/thumbnails/multyfly-thumbnail.png">
+					<div class="subtext"><img src="download.svg"></div>
 					<div class="overlay">
 						<div class="text">Multy Fly</div>
 					</div></a>
 				</div>
 				<div class="project"><a href="projects/on-the-run">
 					<img src="res/thumbnails/ontherun-thumbnail.png">
+					<div class="subtext"><img src="play.svg"></div>
 					<div class="overlay">
 						<div class="text">On The Run</div>
 					</div></a>
 				</div>
 				<div class="project"><a href="downloads/Parmour.exe">
 					<img src="res/thumbnails/parmour-thumbnail.png">
+					<div class="subtext"><img src="download.svg"></div>
 					<div class="overlay">
 						<div class="text">Parmour</div>
 					</div></a>
@@ -151,12 +153,14 @@
 				</div>
 				<div class="project"><a href="downloads/Speed1.6.exe">
 					<img src="res/thumbnails/speed-thumbnail.png">
+					<div class="subtext"><img src="download.svg"></div>
 					<div class="overlay">
 						<div class="text">Speed</div>
 					</div></a>
 				</div>
 				<div class="project"><a href="projects/mazechallenge">
 					<img src="res/thumbnails/aimaze-thumbnail.png">
+					<div class="subtext"><img src="play.svg"></div>
 					<div class="overlay">
 						<div class="text">AI Maze</div>
 					</div></a>
@@ -169,20 +173,23 @@
 				</div>
 			</div>
 			<div class="column">
-				<div class="project"><a href="">
+				<div class="project"><a href="downloads/pirate-adventure.exe">
 					<img src="res/thumbnails/pirateadventure-thumbnail.png">
+					<div class="subtext"><img src="download.svg"></div>
 					<div class="overlay">
 						<div class="text">Pirate Adventure</div>
 					</div></a>
 				</div>
 				<div class="project"><a href="http://savagerunner.netlify.com">
 					<img src="res/thumbnails/savagerunner-thumbnail.png" target="_blank">
+					<div class="subtext"><img src="play.svg"></div>
 					<div class="overlay">
 						<div class="text">Savage Runner</div>
 					</div></a>
 				</div>
 				<div class="project"><a href="projects/towerblock">
 					<img src="res/thumbnails/towerblock-thumbnail.png">
+					<div class="subtext"><img src="play.svg"></div>
 					<div class="overlay">
 						<div class="text">Tower Block</div>
 					</div></a>
