web button for jpcode

--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 				</div>
 				<div class="project"><a href="projects/jpcode">
 					<img src="res/thumbnails/jpcode-thumbnail.png">
-					<div class="subtext"><img src="play.svg"></div>
+					<div class="subtext"><img src="web.svg"></div>
 					<div class="overlay">
 						<div class="text">JPCode</div>
 					</div></a>
