--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 			<h2 class="animated zoomIn">Game Developer and Programmer</h2>
 		</div>
 		<div class="bottomTextOverlay">
-			<h1 class="animated zoomIn">Latest Projects:</h1>
+			<h1 class="animated zoomIn">Projects:</h1>
 		</div>
 	</div>
 	<div class = "content">
