--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
 						<div class="text">Pirate Adventure</div>
 					</div></a>
 				</div>
-				<div class="project"><a href="http://savagerunner.netlify.com">
+				<div class="project"><a href="projects/savagerunner>
 					<img src="res/thumbnails/savagerunner-thumbnail.png" target="_blank">
 					<div class="subtext"><img src="play.svg"></div>
 					<div class="overlay">
