--- a/projects/savagerunner/index.html
+++ b/projects/savagerunner/index.html
@@ -8,6 +8,7 @@
         <meta name ="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0" />
         <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
         <meta charset="utf-8"/>
+        <meta name="description" content="Inspired by The Lord of the Flies, this game allows you to become Ralph at the end of the story. Can you outrun the savages and make it to safety? by Joris Postmus">
 
         <!-- Set the title bar of the page -->
         <title>Savage Runner</title>
