--- a/dodge/index.html
+++ b/dodge/index.html
@@ -42,7 +42,8 @@
 			Joris is very allergic to hamburgers and has accidentally walked into a burger king, <br>Use the arrow keys to move, 
 			the goal is to survive as long as possible.
 		</h3>
-		<h4>Music: -Electroman adventures- by "Waterflame" <a href="https://www.newgrounds.com/audio/listen/479319">link</a></h4>
+
+		<h4>Made by Joris Postmus<br>Music: -Electroman adventures- by "Waterflame" <a href="https://www.newgrounds.com/audio/listen/479319">link</a></h4>
 	</center>
 </body>
 </html>
