--- a/index.html
+++ b/index.html
@@ -180,8 +180,8 @@
 						<div class="text">Pirate Adventure</div>
 					</div></a>
 				</div>
-				<div class="project"><a href="projects/savagerunner>
-					<img src="res/thumbnails/savagerunner-thumbnail.png" target="_blank">
+				<div class="project"><a href="projects/savagerunner" target="_blank">
+					<img src= "res/thumbnails/savagerunner-thumbnail.png">
 					<div class="subtext"><img src="play.svg"></div>
 					<div class="overlay">
 						<div class="text">Savage Runner</div>
