--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
 						<div class="text">Pirate Adventure</div>
 					</div></a>
 				</div>
-				<div class="project"><a href="projects/savagerunner" target="_blank">
+				<div class="project"><a href="http://savagerunner.netlify.com">
 					<img src= "res/thumbnails/savagerunner-thumbnail.png">
 					<div class="subtext"><img src="play.svg"></div>
 					<div class="overlay">
