--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
 	<div class = "header">
 		<div class="video"></div>
-			<video autoplay loop muted poster="res/thumbnails/baconbrawl-thumbnail.png">
+			<video autoplay autobuffer playsinline loop muted poster="res/thumbnails/baconbrawl-thumbnail.png">
 			<source src="res/pics/trailervid.mp4" type="video/mp4">
 		</video>
 		<div class="colorOverlay"></div>
