--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
 					<div class="overlay">
 						<div class="text">Bacon Brawl</div>
 						<div class="subtext"><img src="download.svg"></div>
+						<div class="platform"><img src="gamemaker.png"></div>
 					</div>
 				</div></a>
 				<div class="project"><a href="downloads/bal.exe">
@@ -39,6 +40,7 @@
 					<div class="overlay">
 						<div class="text">Bal</div>
 						<div class="subtext"><img src="download.svg"></div>
+						<div class="platform"><img src="gamemaker.png"></div>
 					</div>
 				</div></a>
 				<div class="project"><a href="projects/bounce/">
@@ -46,19 +48,22 @@
 					<div class="overlay">
 						<div class="text">Bounce</div>
 						<div class="subtext"><img src="play.svg"></div>
+						<div class="platform"><img src="gamemaker.png"></div>
 					</div>
 				</div></a>
 				<div class="project"><a href="projects/ai/">
 					<img src="res/thumbnails/ai-thumbnail.png" alt="Artificial Intelligence - Ant Colony">
 					<div class="overlay">
-						<div class="text">AI</div>
+						<div class="text">Simulation</div>
 						<div class="subtext"><img src="play.svg"></div>
+						<div class="platform"><img src="html.svg"></div>
 					</div>
 				</div></a>
 				<div class="project">
 					<img src="res/thumbnails/meathunt-thumbnail.png" alt="Meathunt">
 					<div class="overlay">
 						<div class="text">Meathunt</div>
+						<div class="platform"><img src="studio.png"></div>
 					</div>
 				</div>
 				<div class="project"><a href="https://jorisgame.netlify.com/" target="_blank">
@@ -66,12 +71,14 @@
 					<div class="overlay">
 						<div class="text">Joris Game</div>
 						<div class="subtext"><img src="play.svg"></div>
+						<div class="platform"><img src="html.svg"></div>
 					</div></a>
 				</div>
 				<div class="project"><a href="">
 					<img src="res/thumbnails/shrenk-thumbnail.png">
 					<div class="overlay">
 						<div class="text">Shrenk</div>
+						<div class="platform"><img src="gamemaker.png"></div>
 					</div></a>
 				</div>
 			</div>
@@ -80,6 +87,7 @@
 					<img src="res/thumbnails/bp-thumbnail.png">
 					<div class="overlay">
 						<div class="text">BP</div>
+						<div class="platform"><img src="gamemaker.png"></div>
 					</div></a>
 				</div>
 				<div class="project"><a href="projects/dodgo/" target="_blank">
@@ -87,6 +95,7 @@
 					<div class="overlay">
 						<div class="subtext"><img src="play.svg"></div>
 						<div class="text">Dodgo</div>
+						<div class="platform"><img src="studio.png"></div>
 					</div></a>
 				</div>
 				<div class="project"><a href="projects/jpcode">
@@ -94,6 +103,7 @@
 					<div class="overlay">
 						<div class="subtext"><img src="web.svg"></div>
 						<div class="text">JPCode</div>
+						<div class="platform"><img src="java.svg"></div>
 					</div></a>
 				</div>
 				<div class="project"><a href="downloads/fps-joris.exe">
@@ -101,25 +111,29 @@
 					<div class="overlay">
 						<div class="text">FPS Joris</div>
 						<div class="subtext"><img src="download.svg"></div>
+						<div class="platform"><img src="gamemaker.png"></div>
 					</div></a>
 				</div>
-				<div class="project"><a href="">
+				<div class="project">
 					<img src="res/thumbnails/gtj-thumbnail.png">
 					<div class="overlay">
 						<div class="text">GTJ</div>
-					</div></a>
+						<div class="platform"><img src="studio.png"></div>
+					</div>
 				</div>
-				<div class="project"><a href="">
+				<div class="project">
 					<img src="res/thumbnails/airspace-thumbnail.png">
 					<div class="overlay">
 						<div class="text">Air Space</div>
-					</div></a>
+						<div class="platform"><img src="unity.svg"></div>
+					</div>
 				</div>
 				<div class="project"><a href="downloads/tinyworld.exe">
 					<img src="res/thumbnails/tinyworld-thumbnail.png">
 					<div class="overlay">
 						<div class="text">Tiny World</div>
 						<div class="subtext"><img src="download.svg"></div>
+						<div class="platform"><img src="gamemaker.png"></div>
 					</div></a>
 				</div>
 			</div>
@@ -129,6 +143,7 @@
 					<div class="overlay">
 						<div class="text">Multy Fly</div>
 						<div class="subtext"><img src="download.svg"></div>
+						<div class="platform"><img src="gamemaker.png"></div>
 					</div></a>
 				</div>
 				<div class="project"><a href="projects/on-the-run">
@@ -136,6 +151,7 @@
 					<div class="overlay">
 						<div class="text">On The Run</div>
 						<div class="subtext"><img src="play.svg"></div>
+						<div class="platform"><img src="gamemaker.png"></div>
 					</div></a>
 				</div>
 				<div class="project"><a href="downloads/Parmour.exe">
@@ -143,12 +159,15 @@
 					<div class="overlay">
 						<div class="subtext"><img src="download.svg"></div>
 						<div class="text">Parmour</div>
+						<div class="platform"><img src="gamemaker.png"></div>
 					</div></a>
 				</div>
-				<div class="project"><a href="">
-					<img src="res/thumbnails/waves-thumbnail.png">
+				<div class="project">
+					<img src="res/thumbnails/hambo-thumbnail.png"><a href="dodge/">
 					<div class="overlay">
-						<div class="text">Waves</div>
+						<div class="text">Hambo Dodge</div>
+						<div class="subtext"><img src="play.svg"></div>
+						<div class="platform"><img src="html.svg"></div>
 					</div></a>
 				</div>
 				<div class="project"><a href="downloads/Speed1.6.exe">
@@ -156,6 +175,7 @@
 					<div class="overlay">
 						<div class="text">Speed</div>
 						<div class="subtext"><img src="download.svg"></div>
+						<div class="platform"><img src="studio.png"></div>
 					</div></a>
 				</div>
 				<div class="project"><a href="projects/mazechallenge">
@@ -163,13 +183,15 @@
 					<div class="overlay">
 						<div class="text">AI Maze</div>
 						<div class="subtext"><img src="play.svg"></div>
+						<div class="platform"><img src="studio.png"></div>
 					</div></a>
 				</div>
-				<div class="project"><a href="">
+				<div class="project">
 					<img src="res/thumbnails/dragonadventure-thumbnail.jpg">
 					<div class="overlay">
 						<div class="text">Dragon Adventure</div>
-					</div></a>
+						<div class="platform"><img src="bat.svg"></div>
+					</div>
 				</div>
 			</div>
 			<div class="column">
@@ -178,6 +200,7 @@
 					<div class="overlay">
 						<div class="text">Pirate Adventure</div>
 						<div class="subtext"><img src="download.svg"></div>
+						<div class="platform"><img src="gamemaker.png"></div>
 					</div></a>
 				</div>
 				<div class="project"><a href="http://savagerunner.netlify.com">
@@ -185,6 +208,7 @@
 					<div class="overlay">
 						<div class="text">Savage Runner</div>
 						<div class="subtext"><img src="play.svg"></div>
+						<div class="platform"><img src="studio.png"></div>
 					</div></a>
 				</div>
 				<div class="project"><a href="projects/towerblock">
@@ -192,31 +216,36 @@
 					<div class="overlay">
 						<div class="text">Tower Block</div>
 						<div class="subtext"><img src="play.svg"></div>
+						<div class="platform"><img src="studio.png"></div>
 					</div></a>
 				</div>
-				<div class="project"><a href="">
+				<div class="project">
 					<img src="res/thumbnails/themaze-thumbnail.png">
 					<div class="overlay">
 						<div class="text">The Maze</div>
-					</div></a>
+						<div class="platform"><img src="studio.png"></div>
+					</div>
 				</div>
-				<div class="project"><a href="">
+				<div class="project">
 					<img src="res/thumbnails/chase-thumbnail.png">
 					<div class="overlay">
 						<div class="text">Chase</div>
-					</div></a>
+						<div class="platform"><img src="studio.png"></div>
+					</div>
 				</div>
-				<div class="project"><a href="">
+				<div class="project">
 					<img src="res/thumbnails/cubey-thumbnail.jpg">
 					<div class="overlay">
 						<div class="text">Cubey</div>
-					</div></a>
+						<div class="platform"><img src="unity.svg"></div>
+					</div>
 				</div>
 				<div class="project"><a href="projects/JorVive.zip">
 					<img src="res/thumbnails/jorvive-thumbnail.png">
 					<div class="overlay">
 						<div class="text">JorVive</div>
 						<div class="subtext"><img src="download.svg"></div>
+						<div class="platform"><img src="python.svg"></div>
 					</div></a>
 				</div>
 			</div>	
