--- a/index.html
+++ b/index.html
@@ -59,13 +59,14 @@
 						<div class="platform"><img src="html.svg"></div>
 					</div>
 				</div></a>
-				<div class="project">
-					<img src="res/thumbnails/meathunt-thumbnail.png" alt="Meathunt">
+				<div class="project"><a href="projects/hover/">
+					<img src="res/thumbnails/hover-thumbnail.png" alt="Hover Website">
 					<div class="overlay">
-						<div class="text">Meathunt</div>
-						<div class="platform"><img src="studio.png"></div>
+						<div class="text">Hover</div>
+						<div class="subtext"><img src="web.svg"></div>
+						<div class="platform"><img src="html.svg"></div>
 					</div>
-				</div>
+				</div></a>
 				<div class="project"><a href="https://jorisgame.netlify.com/" target="_blank">
 					<img src="res/thumbnails/jorisgame-thumbnail.png">
 					<div class="overlay">
