--- a/index.html
+++ b/index.html
@@ -220,12 +220,13 @@
 						<div class="platform"><img src="studio.png"></div>
 					</div></a>
 				</div>
-				<div class="project">
-					<img src="res/thumbnails/themaze-thumbnail.png">
+				<div class="project"><a href="http://www.universelle.nl" target="_blank">
+					<img src="res/thumbnails/universelle-thumbnail.png">
 					<div class="overlay">
-						<div class="text">The Maze</div>
-						<div class="platform"><img src="studio.png"></div>
-					</div>
+						<div class="text">Universelle</div>
+						<div class="platform"><img src="html.svg"></div>
+						<div class="subtext"><img src="web.svg"></div>
+					</div></a>
 				</div>
 				<div class="project">
 					<img src="res/thumbnails/chase-thumbnail.png">
