--- a/index.html
+++ b/index.html
@@ -228,13 +228,14 @@
 						<div class="subtext"><img src="web.svg"></div>
 					</div></a>
 				</div>
-				<div class="project">
-					<img src="res/thumbnails/chase-thumbnail.png">
+				<div class="project"><a href="projects/lions-mane-jellyfish/" target="_blank">
+					<img src="res/thumbnails/jellyfish-thumbnail.png">
 					<div class="overlay">
-						<div class="text">Chase</div>
-						<div class="platform"><img src="studio.png"></div>
+						<div class="text">Lion's Mane Jellyfish</div>
+						<div class="platform"><img src="html.svg"></div>
+						<div class="subtext"><img src="web.svg"></div>
 					</div>
-				</div>
+				</div></a>
 				<div class="project">
 					<img src="res/thumbnails/cubey-thumbnail.jpg">
 					<div class="overlay">
