added image descriptions

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 					</div>
 				</div></a>
 				<div class="project"><a href="https://jorisgame.netlify.com/" target="_blank">
-					<img src="res/thumbnails/jorisgame-thumbnail.png">
+					<img src="res/thumbnails/jorisgame-thumbnail.png" alt="Joris Game">
 					<div class="overlay">
 						<div class="text">Joris Game</div>
 						<div class="subtext"><img src="play.svg"></div>
@@ -76,7 +76,7 @@
 					</div></a>
 				</div>
 				<div class="project"><a href="">
-					<img src="res/thumbnails/shrenk-thumbnail.png">
+					<img src="res/thumbnails/shrenk-thumbnail.png" alt="Shrenk">
 					<div class="overlay">
 						<div class="text">Shrenk</div>
 						<div class="platform"><img src="gamemaker.png"></div>
@@ -85,14 +85,14 @@
 			</div>
 			<div class="column">
 				<div class="project"><a href="">
-					<img src="res/thumbnails/bp-thumbnail.png">
+					<img src="res/thumbnails/bp-thumbnail.png" alt="BP">
 					<div class="overlay">
 						<div class="text">BP</div>
 						<div class="platform"><img src="gamemaker.png"></div>
 					</div></a>
 				</div>
 				<div class="project"><a href="projects/dodgo/" target="_blank">
-					<img src="res/thumbnails/dodgo-thumbnail.png">
+					<img src="res/thumbnails/dodgo-thumbnail.png" alt="Dodgo">
 					<div class="overlay">
 						<div class="subtext"><img src="play.svg"></div>
 						<div class="text">Dodgo</div>
@@ -100,7 +100,7 @@
 					</div></a>
 				</div>
 				<div class="project"><a href="projects/jpcode">
-					<img src="res/thumbnails/jpcode-thumbnail.png">
+					<img src="res/thumbnails/jpcode-thumbnail.png" alt="JP Code">
 					<div class="overlay">
 						<div class="subtext"><img src="web.svg"></div>
 						<div class="text">JPCode</div>
@@ -108,7 +108,7 @@
 					</div></a>
 				</div>
 				<div class="project"><a href="downloads/fps-joris.exe">
-					<img src="res/thumbnails/fpsjoris-thumbnail.png">
+					<img src="res/thumbnails/fpsjoris-thumbnail.png" alt="FPS Joris">
 					<div class="overlay">
 						<div class="text">FPS Joris</div>
 						<div class="subtext"><img src="download.svg"></div>
@@ -116,21 +116,21 @@
 					</div></a>
 				</div>
 				<div class="project">
-					<img src="res/thumbnails/gtj-thumbnail.png">
+					<img src="res/thumbnails/gtj-thumbnail.png" alt="GTJ">
 					<div class="overlay">
 						<div class="text">GTJ</div>
 						<div class="platform"><img src="studio.png"></div>
 					</div>
 				</div>
 				<div class="project">
-					<img src="res/thumbnails/airspace-thumbnail.png">
+					<img src="res/thumbnails/airspace-thumbnail.png" alt="Air Space">
 					<div class="overlay">
 						<div class="text">Air Space</div>
 						<div class="platform"><img src="unity.svg"></div>
 					</div>
 				</div>
 				<div class="project"><a href="downloads/tinyworld.exe">
-					<img src="res/thumbnails/tinyworld-thumbnail.png">
+					<img src="res/thumbnails/tinyworld-thumbnail.png" alt="Tiny World">
 					<div class="overlay">
 						<div class="text">Tiny World</div>
 						<div class="subtext"><img src="download.svg"></div>
@@ -140,7 +140,7 @@
 			</div>
 			<div class="column">
 				<div class="project"><a href="downloads/multy-fly.exe">
-					<img src="res/thumbnails/multyfly-thumbnail.png">
+					<img src="res/thumbnails/multyfly-thumbnail.png" alt="Multy Fly">
 					<div class="overlay">
 						<div class="text">Multy Fly</div>
 						<div class="subtext"><img src="download.svg"></div>
@@ -148,7 +148,7 @@
 					</div></a>
 				</div>
 				<div class="project"><a href="projects/on-the-run">
-					<img src="res/thumbnails/ontherun-thumbnail.png">
+					<img src="res/thumbnails/ontherun-thumbnail.png" alt="On The Run">
 					<div class="overlay">
 						<div class="text">On The Run</div>
 						<div class="subtext"><img src="play.svg"></div>
@@ -156,7 +156,7 @@
 					</div></a>
 				</div>
 				<div class="project"><a href="downloads/Parmour.exe">
-					<img src="res/thumbnails/parmour-thumbnail.png">
+					<img src="res/thumbnails/parmour-thumbnail.png" alt="Parmour">
 					<div class="overlay">
 						<div class="subtext"><img src="download.svg"></div>
 						<div class="text">Parmour</div>
@@ -164,7 +164,7 @@
 					</div></a>
 				</div>
 				<div class="project">
-					<img src="res/thumbnails/hambo-thumbnail.png"><a href="dodge/">
+					<img src="res/thumbnails/hambo-thumbnail.png" alt="HamboDodge"><a href="dodge/">
 					<div class="overlay">
 						<div class="text">Hambo Dodge</div>
 						<div class="subtext"><img src="play.svg"></div>
@@ -172,7 +172,7 @@
 					</div></a>
 				</div>
 				<div class="project"><a href="downloads/Speed1.6.exe">
-					<img src="res/thumbnails/speed-thumbnail.png">
+					<img src="res/thumbnails/speed-thumbnail.png" alt="Speed">
 					<div class="overlay">
 						<div class="text">Speed</div>
 						<div class="subtext"><img src="download.svg"></div>
@@ -180,7 +180,7 @@
 					</div></a>
 				</div>
 				<div class="project"><a href="projects/mazechallenge">
-					<img src="res/thumbnails/aimaze-thumbnail.png">
+					<img src="res/thumbnails/aimaze-thumbnail.png" alt="The Maze Challenge">
 					<div class="overlay">
 						<div class="text">AI Maze</div>
 						<div class="subtext"><img src="play.svg"></div>
@@ -188,7 +188,7 @@
 					</div></a>
 				</div>
 				<div class="project">
-					<img src="res/thumbnails/dragonadventure-thumbnail.jpg">
+					<img src="res/thumbnails/dragonadventure-thumbnail.jpg" alt="Dragon Adventure">
 					<div class="overlay">
 						<div class="text">Dragon Adventure</div>
 						<div class="platform"><img src="bat.svg"></div>
@@ -197,7 +197,7 @@
 			</div>
 			<div class="column">
 				<div class="project"><a href="downloads/pirate-adventure.exe">
-					<img src="res/thumbnails/pirateadventure-thumbnail.png">
+					<img src="res/thumbnails/pirateadventure-thumbnail.png" alt="Pirate Adventure">
 					<div class="overlay">
 						<div class="text">Pirate Adventure</div>
 						<div class="subtext"><img src="download.svg"></div>
@@ -205,7 +205,7 @@
 					</div></a>
 				</div>
 				<div class="project"><a href="http://savagerunner.netlify.com">
-					<img src= "res/thumbnails/savagerunner-thumbnail.png">
+					<img src= "res/thumbnails/savagerunner-thumbnail.png" alt="The Savage Runner">
 					<div class="overlay">
 						<div class="text">Savage Runner</div>
 						<div class="subtext"><img src="play.svg"></div>
@@ -213,7 +213,7 @@
 					</div></a>
 				</div>
 				<div class="project"><a href="projects/towerblock">
-					<img src="res/thumbnails/towerblock-thumbnail.png">
+					<img src="res/thumbnails/towerblock-thumbnail.png" alt="Tower Block">
 					<div class="overlay">
 						<div class="text">Tower Block</div>
 						<div class="subtext"><img src="play.svg"></div>
@@ -229,7 +229,7 @@
 					</div></a>
 				</div>
 				<div class="project"><a href="projects/lions-mane-jellyfish/" target="_blank">
-					<img src="res/thumbnails/jellyfish-thumbnail.png">
+					<img src="res/thumbnails/jellyfish-thumbnail.png" alt="The Lion's Mane Jellyfish">
 					<div class="overlay">
 						<div class="text">Lion's Mane Jellyfish</div>
 						<div class="platform"><img src="html.svg"></div>
@@ -237,14 +237,14 @@
 					</div>
 				</div></a>
 				<div class="project">
-					<img src="res/thumbnails/cubey-thumbnail.jpg">
+					<img src="res/thumbnails/cubey-thumbnail.jpg" alt="Cubey">
 					<div class="overlay">
 						<div class="text">Cubey</div>
 						<div class="platform"><img src="unity.svg"></div>
 					</div>
 				</div>
 				<div class="project"><a href="projects/JorVive.zip">
-					<img src="res/thumbnails/jorvive-thumbnail.png">
+					<img src="res/thumbnails/jorvive-thumbnail.png" alt="JorVive">
 					<div class="overlay">
 						<div class="text">JorVive</div>
 						<div class="subtext"><img src="download.svg"></div>
