--- a/index.html
+++ b/index.html
@@ -8,6 +8,15 @@
 	<link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
 	<script type="text/javascript" src="script.js"></script>
 	<link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+	<!-- Global site tag (gtag.js) - Google Analytics -->
+	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-100423879-3"></script>
+	<script>
+	  window.dataLayer = window.dataLayer || [];
+	  function gtag(){dataLayer.push(arguments);}
+	  gtag('js', new Date());
+
+	  gtag('config', 'UA-100423879-3');
+	</script>
 </head>
 <body>
 	<div class = "header">
