--- a/index.html
+++ b/index.html
@@ -2,7 +2,11 @@
 <html>
 <head>
 	<title>Joris Postmus | Game Developer & Programmer</title>
+	<meta charset="UTF-8">
 	<meta name="description" content="Portfolio of Joris Postmus, a game developer and programmer. Get inspired and play games. Downloadable games as well as playable HTML games can be found here.">
+	<meta name="keywords" content="Joris Postmus, Joris Portfolio, Joris Postmus Portfolio, Joris Code, Joris P, Joris Pos">
+	<meta name="author" content="Joris Postmus">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" type="text/css" href="style.css">
 	<link rel="stylesheet" type="text/css" href="animate.css">
 	<link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
