--- a/dodge/index.html
+++ b/dodge/index.html
@@ -3,6 +3,11 @@
 <head>
 	<title>JorDodge</title>
 	<link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
+	<meta name="description" content="Joris is very allergic to hamburgers and has accidentally walked into a burger king, Use the arrow keys to move, 
+			the goal is to survive as long as possible.">
+	<meta name="keywords" content="Joris Postmus, Joris Portfolio, Joris Postmus Portfolio, Joris Code, Joris P, Joris Pos, HamboDodge, Hamburger Dodge, Joris Hambo, Joris Hamburger">
+	<meta name="author" content="Joris Postmus">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<style>
 		body {
 			padding: 0px;
