--- a/dodge/index.html
+++ b/dodge/index.html
@@ -8,6 +8,15 @@
 	<meta name="keywords" content="Joris Postmus, Joris Portfolio, Joris Postmus Portfolio, Joris Code, Joris P, Joris Pos, HamboDodge, Hamburger Dodge, Joris Hambo, Joris Hamburger">
 	<meta name="author" content="Joris Postmus">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<!-- Global site tag (gtag.js) - Google Analytics -->
+	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-100423879-3"></script>
+	<script>
+	  window.dataLayer = window.dataLayer || [];
+	  function gtag(){dataLayer.push(arguments);}
+	  gtag('js', new Date());
+
+	  gtag('config', 'UA-100423879-3');
+	</script>
 	<style>
 		body {
 			padding: 0px;
