--- a/projects/jpcode/index.html
+++ b/projects/jpcode/index.html
@@ -3,8 +3,21 @@
 <head>
 	<title>JPCode</title>
 	<link href="https://fonts.googleapis.com/css?family=Dosis" rel="stylesheet">
+	<meta name="description" content="The newest and best form of visual encryption is here. Encrypt up to 1.2 million characters in one single 200x200 picture!">
+	<meta name="keywords" content="JPCode, steganography, colorful steganography, colorful encryption, Joris Encryption, Joris JPCode, Joris Code, Color Encryption">
+	<meta name="author" content="Joris Postmus">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel = "stylesheet" type="text/css" href = "styles.css">
 	<script src="script.js"></script>
+	<!-- Global site tag (gtag.js) - Google Analytics -->
+	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-100423879-3"></script>
+	<script>
+	  window.dataLayer = window.dataLayer || [];
+	  function gtag(){dataLayer.push(arguments);}
+	  gtag('js', new Date());
+
+	  gtag('config', 'UA-100423879-3');
+	</script>
 </script>
 </head>
 <body>
