--- a/index.html
+++ b/index.html
@@ -200,13 +200,13 @@
 						<div class="platform"><img src="studio.png"></div>
 					</div></a>
 				</div>
-				<div class="project">
+				<div class="project"><a href="projects/Dragon-Adventure.bat">
 					<img src="res/thumbnails/dragonadventure-thumbnail.jpg" alt="Dragon Adventure">
 					<div class="overlay">
 						<div class="text">Dragon Adventure</div>
 						<div class="platform"><img src="bat.svg"></div>
 					</div>
-				</div>
+				</div></a>
 			</div>
 			<div class="column">
 				<div class="project"><a href="downloads/pirate-adventure.exe">
