--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 		<div class="colorOverlay"></div>
 		<div class="textOverlay">
 			<h1 class="animated zoomIn">Joris Postmus</h1>
-			<h2 class="animated zoomIn">Game Developer and Programmer</h2>
+			<h2 class="animated zoomIn">Computer Programmer and Software Engineer</h2>
 		</div>
 		<div class="bottomTextOverlay">
 			<h1 class="animated zoomIn">Projects:</h1>
